feat:(day1): Edit the first sentence in the resume section.

--- a/index.html
+++ b/index.html
@@ -567,9 +567,9 @@
                         </div>
                         <div class="desc ">
                             <div class="item  ps-5 position-relative pb-2">
-                                <h3 class="fs-6"><span class="border-2">ART & PHOTO EDITING,</span><span class="fw-light"> CAMBRIDGE UNIVERSIRTY</span></h3>
-                                <span class="text-main-color">September 2009 - June 2012</span>
-                                <p class="mb-0">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                                <h3 class="fs-6"><span class="border-2">Computer Science Technology  CS,</span><span class="fw-light"> ARAB AMERICAN UNIVERSITY</span></h3>
+                                <span class="text-main-color">September 2021 - June 2025</span>
+                                <p class="mb-0">Computer science combines math, engineering, and science to create computer systems and software. It covers topics like programming, algorithms, and data structures. This field prepares students for careers in technology and innovation.</p>
                             </div>
                             <div class="item  ps-5 position-relative pb-2">
                                 <h3 class="fs-6"><span class="border-2">WEB DESIGN TECHNIQUES,</span><span class="fw-light"> ISTA BEN MSIK TRAINING CENTER</span></h3>
