--- a/index.html
+++ b/index.html
@@ -572,9 +572,9 @@
                                 <p class="mb-0">Computer science combines math, engineering, and science to create computer systems and software. It covers topics like programming, algorithms, and data structures. This field prepares students for careers in technology and innovation.</p>
                             </div>
                             <div class="item  ps-5 position-relative pb-2">
-                                <h3 class="fs-6"><span class="border-2">WEB DESIGN TECHNIQUES,</span><span class="fw-light"> ISTA BEN MSIK TRAINING CENTER</span></h3>
-                                <span class="text-main-color">September 2007 - June 2009</span>
-                                <p class="mb-0">Expenses as material breeding insisted building to in. Continual so distrusts pronounce by unwilling listening. Thing do taste on we manor.</p>
+                                <h3 class="fs-6"><span class="border-2">FIRST RESPONDER PARAMEDIC,</span><span class="fw-light"> PALESTINE RED CRESCENT SOCIETY</span></h3>
+                                <span class="text-main-color">August 2022 - February 2023</span>
+                                <p class="mb-0">As a volunteer paramedic with the Red Crescent, I facilitated communication between foreign doctors and local patients through translation. I also participated in numerous ambulance shifts and other volunteer activities in Palestine.</p>
                             </div>
                             <div class="item  ps-5 position-relative pb-2">
                                 <h3 class="fs-6"><span class="border-2">BACCALAUREATE: EXPERIMENTAL SCIENCES,</span><span class="fw-light"> MLY ISMAIL HIGH SCHOOL </span></h3>
